# ove-jupyter

./: .gitignore  LICENSE  README.md  nbextension.ipynb  ove.ipynb  ove.py  reload_nb.sh  requirements.txt  run_custom_server.py  run_r_server.py
examples/playground/: README.md  ipython.ipynb  main.ipynb
ove/: __init__.py  asset_handler.py  controller_builder.py  data_type.py  file_server.py  geometry.py  ipython_display_type.py  layout_validator.py  output_formatter.py  ove.py  ove_app.py  ove_handler.py  ove_magic.py  ove_process.py  r_handler.py  r_server.py  request_handler.py  section_builder.py  utils.py
ove/assets/: controller_format.html  dataframe_format.html  dict_format.html  geojson_format.json  html_format.html  latex_format.html  markdown_format.html  overview.html
ove/ipython/: __init__.py  ove_magic.py
ove/ove/: __init__.py  ove_magic.py
ove/ove_base/: asset_handler.py  controller_builder.py  data_type.py  file_handler.py  geometry.py  output_formatter.py  ove.py  ove_app.py  ove_handler.py  request_handler.py  section_builder.py  server.py
ove/ove_base/assets/: geojson_format.json  latex_format.html  markdown_format.html  overview.html  project.json
ove/ove_nb/: README.md  description.yaml  display_type.js  main.js
ove_jupyter/: LICENSE  pyproject.toml
ove_jupyter/ove_jupyter/: __init__.py  ipython_display_type.py  ove_magic.py
ove_jupyter_nbextension/: README.md  pyproject.toml
ove_jupyter_nbextension/jupyter-config/jupyter_notebook_config.d/: ove_jupyter.json
ove_jupyter_nbextension/jupyter-config/jupyter_server_config.d/: ove_jupyter.json
ove_jupyter_nbextension/jupyter-config/nbconfig/ove_jupyter.d/: ove_jupyter.json
ove_jupyter_nbextension/ove_jupyter_nbextension/: __init__.py  app.py  handlers.py
ove_jupyter_nbextension/ove_jupyter_nbextension/static/: display_type.js  main.js
ove_jupyter_utils/: pyproject.toml
ove_jupyter_utils/ove_jupyter_utils/: __init__.py  asset_handler.py  controller_builder.py  data_type.py  file_handler.py  file_server.py  geometry.py  layout_validator.py  locks.py  output_formatter.py  ove_app.py  ove_handler.py  request_handler.py  section_builder.py  server.py  utils.py
ove_jupyter_utils/ove_jupyter_utils/assets/: controller_format.html  latex_format.html  markdown_format.html  overview.html
